--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,9 @@
   <title>MedicareData</title>
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
+  <script src="http://d3js.org/d3.v3.min.js"  charset="utf-8"></script>
   <%= csrf_meta_tags %>
+
 </head>
 <body>
 
