--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,9 +2,9 @@
 <html>
 <head>
   <title>MedicareData</title>
-  <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
-  <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
+  <link rel="stylesheet" type="text/css" href="/application.css">
   <script src="http://d3js.org/d3.v3.min.js"  charset="utf-8"></script>
+  <script src="/application.js"  charset="utf-8"></script>
   <%= csrf_meta_tags %>
 
 </head>
